@@ -1,3 +1,8 @@
+2006-05-11	Benedikt Meurer <benny@xfce.org>
+
+	* exo-desktop-item-edit/main.c(main): Handle broken Icon values with
+	  file extensions properly. Bug #1795.
+
 2006-05-08	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-wrap-table.c(exo_wrap_table_layout): Fix typo.
